prod-contents/unpackaged/objects/Case.object
<CustomObject>
    <fields>
        <fullName>SVMXC__Actual_Initial_Response__c</fullName>
        <description>Date/time on which customer was initial responsed as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was initial responsed as per commitment in SLA.</inlineHelpText>
        <label>Actual Initial Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Onsite_Response__c</fullName>
        <description>Date/time on which customer was onsite responsed as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was onsite responsed as per commitment in SLA.</inlineHelpText>
        <label>Actual Onsite Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Resolution__c</fullName>
        <description>Date/time on which customer was resolved as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was resolved as per commitment in SLA.</inlineHelpText>
        <label>Actual Resolution</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Restoration__c</fullName>
        <description>Date/time on which customer was restored as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was restored as per commitment in SLA.</inlineHelpText>
        <label>Actual Restoration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Auto_Entitlement_Status__c</fullName>
        <label>Auto Entitlement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__BW_Date__c</fullName>
        <description>Booking Window Date</description>
        <label>BW Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__BW_Selected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BW Selected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_BW_Selected_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__BW_Selected_On__c</fullName>
        <label>BW Selected On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__BW_Slots_Before__c</fullName>
        <label>BW Slots Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__BW_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BW Territory</label>
        <referenceTo>SVMXC__Territory__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__BW_Time_Zone__c</fullName>
        <label>BW Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Billing_Type__c</fullName>
        <description>Select Billing Type</description>
        <inlineHelpText>Select Billing Type</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Courtesy</fullName>
                </value>
                <value>
                    <fullName>Empowerment</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Booking_Window__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Window</label>
        <referenceTo>SVMXC__Booking_Window__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Clock_Paused_Forever__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clock Paused Forever</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component_City__c</fullName>
        <description>“City” part of the physical location address of Component SN</description>
        <formula>SVMXC__Component__r.SVMXC__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>“City” part of the physical location address of Component SN</inlineHelpText>
        <label>Component SN City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component_Country__c</fullName>
        <description>“Country” part of the physical location address of Component SN</description>
        <formula>TEXT(SVMXC__Component__r.SVMXC__Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>“Country” part of the physical location address of Component SN</inlineHelpText>
        <label>Component SN Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component_State__c</fullName>
        <description>“State/Province” part of the physical location address of Component SN</description>
        <formula>SVMXC__Component__r.SVMXC__State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>“State/Province” part of the physical location address of Component SN</inlineHelpText>
        <label>Component SN State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component_Street__c</fullName>
        <description>“Street” part of the physical location address of Component SN</description>
        <formula>SVMXC__Component__r.SVMXC__Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>“Street” part of the physical location address of Component SN</inlineHelpText>
        <label>Component SN Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component_Zip__c</fullName>
        <description>“Zip/Postal Code” part of the physical location address of Component SN</description>
        <formula>SVMXC__Component__r.SVMXC__Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>“Zip/Postal Code” part of the physical location address of Component SN</inlineHelpText>
        <label>Component SN Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial number of the component for which the customer is seeking support. Is a lookup to an existing installed product record in ServiceMax</description>
        <inlineHelpText>Serial number of the component for which the customer is seeking support. Is a lookup to an existing installed product record in ServiceMax</inlineHelpText>
        <label>Component SN</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Case1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_Notes__c</fullName>
        <description>Additional information entered in Case during customer entitlement</description>
        <inlineHelpText>Additional information entered in Case during customer entitlement</inlineHelpText>
        <label>Entitlement Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_Type__c</fullName>
        <description>This is for internal use,  and this is set to &apos;Auto&apos; by Auto-Entitlement or set to &apos;Interactive&apos; in interactive entitlement.</description>
        <inlineHelpText>This is for internal use,  and this is set to &apos;Auto&apos; by Auto-Entitlement or set to &apos;Interactive&apos; in interactive entitlement.</inlineHelpText>
        <label>Entitlement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUTO</fullName>
                </value>
                <value>
                    <fullName>INTERACTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Initial_Response_Customer_By__c</fullName>
        <label>Initial Response Customer By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Initial_Response_Internal_By__c</fullName>
        <description>Date/time by which customer should be initial responsed as per internal commitment in SLA.</description>
        <inlineHelpText>Date/time by which customer should be initial responsed as per internal commitment in SLA.</inlineHelpText>
        <label>Initial Response Internal By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Entitlement_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Entitlement Performed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Invoice_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Invoice Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_PM_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PM Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_SLA_Calculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Service_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Service Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Onsite_Response_Customer_By__c</fullName>
        <label>Onsite Response Customer By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Onsite_Response_Internal_By__c</fullName>
        <description>Date/time by which customer should be onsite responsed as per internal commitment in SLA.</description>
        <inlineHelpText>Date/time by which customer should be onsite responsed as per internal commitment in SLA.</inlineHelpText>
        <label>Onsite Response Internal By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__PM_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preventive Maintenance Plan</label>
        <referenceTo>SVMXC__PM_Plan__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Perform_Auto_Entitlement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Perform Auto Entitlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_End_Time__c</fullName>
        <description>End time for the case to be scheduled. Calculated automatically based on booking window selection.</description>
        <inlineHelpText>End time for the case to be scheduled. Calculated automatically based on booking window selection.</inlineHelpText>
        <label>Preferred End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Start_Time__c</fullName>
        <description>Start time for the case to be scheduled. Calculated automatically based on booking window selection.</description>
        <inlineHelpText>Start time for the case to be scheduled. Calculated automatically based on booking window selection.</inlineHelpText>
        <label>Preferred Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product for which customer is seeking support. Reference to Product2 object.</description>
        <inlineHelpText>Choose or enter the Product name for which the customer is seeking support.</inlineHelpText>
        <label>Component Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Proforma_Invoice_Amount__c</fullName>
        <label>Proforma Invoice Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Proforma_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proforma Invoice</label>
        <referenceTo>SVMXC__Proforma_Invoice__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Resolution_Customer_By__c</fullName>
        <label>Resolution Customer By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Resolution_Internal_By__c</fullName>
        <description>Date/time by which customer should be resolved as per internal commitment in SLA.</description>
        <inlineHelpText>Date/time by which customer should be resolved as per internal commitment in SLA.</inlineHelpText>
        <label>Resolution Internal By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Restoration_Customer_By__c</fullName>
        <label>Restoration Customer By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Restoration_Internal_By__c</fullName>
        <description>Date/time by which customer should be restored as per internal commitment in SLA.</description>
        <inlineHelpText>Date/time by which customer should be restored as per internal commitment in SLA.</inlineHelpText>
        <label>Restoration Internal By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SContract_Business_Hour__c</fullName>
        <formula>CASESAFEID(SVMXC__Service_Contract__r.SVMXC__Business_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SContract Business Hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Extension_Minutes__c</fullName>
        <label>SLA Clock Extension Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Days__c</fullName>
        <label>SLA Clock Pause Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Hours__c</fullName>
        <label>SLA Clock Pause Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Minutes__c</fullName>
        <label>SLA Clock Pause Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Reason__c</fullName>
        <label>SLA Clock Pause Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Restart_Time__c</fullName>
        <label>SLA Clock Pause Restart Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Time__c</fullName>
        <label>SLA Clock Pause Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Paused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA Clock Paused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Level the customer is entitled to by this contract. Is a lookup to an existing service level record.</description>
        <inlineHelpText>Service Level the customer is entitled to by this contract. Is a lookup to an existing service level record.</inlineHelpText>
        <label>SLA Terms</label>
        <referenceTo>SVMXC__Service_Level__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the service contract. Is a lookup to an existing service contract in ServiceMax</description>
        <inlineHelpText>Name of the service contract. Is a lookup to an existing service contract in ServiceMax</inlineHelpText>
        <label>Service/Maintenance Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer location where the contact is reporting the problem or the location of the installed product.</description>
        <inlineHelpText>The customer location where the contact is reporting the problem or the location of the installed product.</inlineHelpText>
        <label>Site</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Cases Reported From This Site</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Initial_Response__c</fullName>
        <description>Time taken to initial response as per commitment in SLA.</description>
        <inlineHelpText>Time taken to initial response as per commitment in SLA.</inlineHelpText>
        <label>Time to Initial Response (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Onsite_Response__c</fullName>
        <description>Time taken to onsite response as per commitment in SLA.</description>
        <inlineHelpText>Time taken to onsite response as per commitment in SLA.</inlineHelpText>
        <label>Time to Onsite Response (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Resolve__c</fullName>
        <description>Time taken to resolve as per commitment in SLA.</description>
        <inlineHelpText>Time taken to resolve as per commitment in SLA.</inlineHelpText>
        <label>Time to Resolve (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Restore__c</fullName>
        <description>Time taken to restore as per commitment in SLA.</description>
        <inlineHelpText>Time taken to restore as per commitment in SLA.</inlineHelpText>
        <label>Time to Restore (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Top_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial number of the top-level installed product to which the component belongs. Is a lookup to an existing installed product record in ServiceMax.</description>
        <inlineHelpText>Serial number of the top-level installed product to which the component belongs. Is a lookup to an existing installed product record in ServiceMax.</inlineHelpText>
        <label>Product/System</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Cases (Top-Level)</relationshipLabel>
        <relationshipName>Case2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Warranty</description>
        <inlineHelpText>Product Warranty</inlineHelpText>
        <label>Warranty</label>
        <referenceTo>SVMXC__Warranty__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>